sumo/tests/duarouter/routes/style1_input/errors/vehicle_empty_departspeed/errors.duarouter
Error: Attribute 'departSpeed' in definition of a vehicle is empty.
Error: Invalid departSpeed definition for vehicle '0'
Quitting (on error).
